--- a/due-processed/style.css
+++ b/due-processed/style.css
@@ -2,7 +2,7 @@
 Theme Name: Due Processed
 Author: Due Processed
 Description: Theme for dueprocessed.com
-Version: 1.1.0
+Version: 1.2.0
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
@@ -19,6 +19,7 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
+
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
@@ -88,11 +89,15 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Generic
 --------------------------------------------------------------*/
+
 /* Normalize
 --------------------------------------------- */
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+
 /* Document
 	 ========================================================================== */
+
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
@@ -104,6 +109,7 @@ html {
 
 /* Sections
 	 ========================================================================== */
+
 /**
  * Remove the margin in all browsers.
  */
@@ -129,6 +135,7 @@ h1 {
 
 /* Grouping content
 	 ========================================================================== */
+
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
@@ -150,6 +157,7 @@ pre {
 
 /* Text-level semantics
 	 ========================================================================== */
+
 /**
  * Remove the gray background on active links in IE 10.
  */
@@ -215,6 +223,7 @@ sup {
 
 /* Embedded content
 	 ========================================================================== */
+
 /**
  * Remove the border on images inside links in IE 10.
  */
@@ -224,6 +233,7 @@ img {
 
 /* Forms
 	 ========================================================================== */
+
 /**
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
@@ -369,6 +379,7 @@ textarea {
 
 /* Interactive
 	 ========================================================================== */
+
 /*
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
@@ -385,6 +396,7 @@ summary {
 
 /* Misc
 	 ========================================================================== */
+
 /**
  * Add the correct display in IE 10+.
  */
@@ -401,6 +413,7 @@ template {
 
 /* Box sizing
 --------------------------------------------- */
+
 /* Inherit box-sizing to more easily change it's value on a component level.
 @link http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
 *,
@@ -416,6 +429,7 @@ html {
 /*--------------------------------------------------------------
 # Base
 --------------------------------------------------------------*/
+
 /* Typography
 --------------------------------------------- */
 body,
@@ -537,7 +551,6 @@ html {
 body {
 	background: #fff;
 }
-
 body.overflow-hidden {
 	overflow: hidden;
 }
@@ -554,7 +567,6 @@ hr {
 	width: calc(100vw - 20px);
 	left: calc((100vw - 100% - 20px) / -2);
 }
-
 @media (min-width: 769px) {
 	.wp-block-separator {
 		width: calc(100vw - 100px);
@@ -625,24 +637,22 @@ a {
 	text-decoration: none;
 	transition: opacity 0.3s ease;
 }
-
 a:visited {
 	color: #005b83;
 }
-
 a:hover {
 	opacity: 0.85;
 }
-
-a:hover, a:focus, a:active {
+a:hover,
+a:focus,
+a:active {
 	color: #005b83;
 }
-
 a:focus {
 	outline: none;
 }
-
-a:hover, a:active {
+a:hover,
+a:active {
 	outline: 0;
 }
 
@@ -665,7 +675,6 @@ input[type="submit"] {
 	cursor: pointer;
 	outline: none;
 }
-
 .button:hover,
 button:hover,
 input[type="button"]:hover,
@@ -674,8 +683,8 @@ input[type="submit"]:hover {
 	opacity: 0.85;
 	color: #fff;
 }
-
-.button:active, .button:focus,
+.button:active,
+.button:focus,
 button:active,
 button:focus,
 input[type="button"]:active,
@@ -686,7 +695,6 @@ input[type="submit"]:active,
 input[type="submit"]:focus {
 	opacity: 0.85;
 }
-
 .button:visited,
 button:visited,
 input[type="button"]:visited,
@@ -724,7 +732,6 @@ textarea {
 	padding-right: 10px;
 	height: 40px;
 }
-
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="url"]:focus,
@@ -763,6 +770,7 @@ textarea {
 /*--------------------------------------------------------------
 # Site
 --------------------------------------------------------------*/
+
 /*--------------------------------------------------------------
 ## Header
 --------------------------------------------------------------*/
@@ -774,29 +782,26 @@ textarea {
 	background: #fff;
 	z-index: 100;
 }
-
 .site-header a {
 	color: #151515;
 	text-decoration: none;
 }
-
-.site-header a:hover, .site-header a:focus, .site-header a:active {
+.site-header a:hover,
+.site-header a:focus,
+.site-header a:active {
 	color: #151515;
 }
-
 @media (max-width: 768px) {
 	.site-header {
 		padding-top: 15px;
 		padding-bottom: 10px;
 	}
 }
-
 @media (min-width: 769px) {
 	.site-header .search-form-wrapper {
 		width: 300px;
 	}
 }
-
 @media (max-width: 768px) {
 	.site-header .search-form-wrapper {
 		margin-top: 10px;
@@ -806,7 +811,6 @@ textarea {
 .site-header-top {
 	display: flex;
 }
-
 @media (min-width: 769px) {
 	.site-header-top {
 		width: calc(100% - (2 * 60px));
@@ -817,13 +821,11 @@ textarea {
 		align-items: center;
 	}
 }
-
 @media (min-width: 769px) and (max-width: 768px) {
 	.site-header-top {
 		width: calc(100% - (2 * 20px));
 	}
 }
-
 @media (max-width: 768px) {
 	.site-header-top {
 		margin: 0 20px;
@@ -835,13 +837,11 @@ textarea {
 	display: flex;
 	align-items: flex-end;
 }
-
 @media (min-width: 769px) {
 	.site-branding {
 		width: 300px;
 	}
 }
-
 @media (max-width: 768px) {
 	.site-branding {
 		width: 195px;
@@ -862,7 +862,6 @@ textarea {
 		display: flex;
 	}
 }
-
 @media (min-width: 769px) and (max-width: 768px) {
 	.site-header-bottom {
 		width: calc(100% - (2 * 20px));
@@ -882,7 +881,6 @@ textarea {
 	margin: 20px;
 	position: relative;
 }
-
 @media (min-width: 769px) {
 	.site-main {
 		width: calc(100% - (2 * 60px));
@@ -893,7 +891,6 @@ textarea {
 		margin-bottom: 50px;
 	}
 }
-
 @media (min-width: 769px) and (max-width: 768px) {
 	.site-main {
 		width: calc(100% - (2 * 20px));
@@ -917,19 +914,16 @@ textarea {
 	display: flex;
 	flex-direction: row;
 }
-
 @media (max-width: 768px) {
 	.site-info {
 		width: calc(100% - (2 * 20px));
 	}
 }
-
 .site-info a {
 	font-size: 1.6rem;
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	color: #151515;
 }
-
 @media (max-width: 768px) {
 	.site-info {
 		flex-direction: column;
@@ -939,7 +933,6 @@ textarea {
 .site-info-left {
 	flex: 3;
 }
-
 @media (max-width: 768px) {
 	.site-info-left {
 		border-bottom: 1px solid #ccc;
@@ -951,7 +944,6 @@ textarea {
 	padding: 0;
 	list-style: none;
 }
-
 .site-info-menu .menu-item {
 	margin-bottom: 10px;
 }
@@ -959,7 +951,6 @@ textarea {
 .site-info-right {
 	flex: 2;
 }
-
 @media (max-width: 768px) {
 	.site-info-right {
 		margin-top: 20px;
@@ -971,7 +962,6 @@ textarea {
 .site-info-row {
 	margin-bottom: 10px;
 }
-
 @media (max-width: 768px) {
 	.site-info-row {
 		margin-bottom: 20px;
@@ -990,7 +980,6 @@ textarea {
 .copyright-desktop {
 	padding-top: 10px;
 }
-
 @media (max-width: 768px) {
 	.copyright-desktop {
 		display: none;
@@ -1000,7 +989,6 @@ textarea {
 .copyright-mobile {
 	display: none;
 }
-
 @media (max-width: 768px) {
 	.copyright-mobile {
 		display: inline;
@@ -1027,7 +1015,6 @@ textarea {
 	flex-direction: row;
 	justify-content: space-between;
 }
-
 @media (max-width: 768px) {
 	.author-profile-body {
 		flex-direction: column;
@@ -1039,7 +1026,6 @@ textarea {
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	margin-bottom: 10px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-title-desktop {
 		display: none;
@@ -1059,7 +1045,6 @@ textarea {
 .author-profile-name-desktop {
 	margin-bottom: 30px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-name-desktop {
 		display: none;
@@ -1070,7 +1055,6 @@ textarea {
 	display: none;
 	margin-bottom: 30px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-photo-name-container-mobile {
 		display: inline-block;
@@ -1090,7 +1074,6 @@ textarea {
 	width: 141px;
 	height: 141px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-photo-desktop {
 		display: none;
@@ -1115,7 +1098,6 @@ textarea {
 	vertical-align: top;
 	margin-right: 40px;
 }
-
 @media (max-width: 768px) {
 	.author-profile-bio {
 		margin: 0 0 20px;
@@ -1154,7 +1136,6 @@ textarea {
 .about-container h1 {
 	margin-bottom: 30px;
 }
-
 @media (max-width: 768px) {
 	.about-container h1 {
 		font-size: 2.2rem;
@@ -1174,7 +1155,6 @@ textarea {
 	line-height: 36px;
 	margin-bottom: 30px;
 }
-
 @media (max-width: 768px) {
 	.about-container h2 {
 		font-size: 2.2rem;
@@ -1190,42 +1170,38 @@ textarea {
 /*--------------------------------------------------------------
 # Components
 --------------------------------------------------------------*/
+
 /* Navigation
 --------------------------------------------- */
+
 /* Main Navigation (Header)
 --------------------------------------------- */
 .main-navigation {
 	display: block;
 	width: 100%;
 }
-
 .main-navigation .main-navigation ul {
 	display: flex;
 }
-
 .main-navigation .menu,
 .main-navigation .sub-menu {
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
 }
-
 .main-navigation .menu {
 	display: flex;
 }
-
 .main-navigation .menu-item {
 	font-size: 1.6rem;
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	position: relative;
 	white-space: nowrap;
 }
-
 .main-navigation a {
 	display: block;
 	text-decoration: none;
 }
-
 .main-navigation .menu > .menu-item > a {
 	line-height: 60px;
 	margin-right: 50px;
@@ -1233,16 +1209,14 @@ textarea {
 	transition: border 0.3s ease;
 	cursor: pointer;
 }
-
-.main-navigation .menu > .menu-item > a:hover, .main-navigation .menu > .menu-item > a.focus {
+.main-navigation .menu > .menu-item > a:hover,
+.main-navigation .menu > .menu-item > a.focus {
 	border-bottom: 3px solid #005b83;
 }
-
 .main-navigation .menu > .menu-item:hover > .sub-menu,
 .main-navigation .menu > .menu-item.focus > .sub-menu {
 	display: block;
 }
-
 @media (min-width: 769px) {
 	.main-navigation .menu > .menu-item > .sub-menu {
 		background-color: #fff;
@@ -1258,11 +1232,9 @@ textarea {
 		z-index: 99999;
 	}
 }
-
 .main-navigation .menu > .menu-item > .sub-menu .sub-menu {
 	margin-left: 10px;
 }
-
 .main-navigation .menu > .menu-item > .sub-menu .menu-item a {
 	margin-bottom: 10px;
 }
@@ -1276,18 +1248,15 @@ textarea {
 	background: #fff;
 	color: #151515;
 }
-
 .main-navigation-icon:hover,
 .main-navigation-icon.toggled:hover {
 	opacity: 0.85;
 	color: #151515;
 }
-
 .main-navigation-icon > span,
 .main-navigation-icon.toggled > span {
 	display: inline-block;
 }
-
 .main-navigation-icon > span.main-navigation-close,
 .main-navigation-icon.toggled > span.main-navigation-close {
 	padding: 6px;
@@ -1360,8 +1329,10 @@ textarea {
 
 /* Other Navigation (Comments, Posts, Etc.)
 --------------------------------------------- */
-.site-main .comment-navigation, .site-main
-.posts-navigation, .site-main
+.site-main .comment-navigation,
+.site-main
+.posts-navigation,
+.site-main
 .post-navigation {
 	margin: 0 0 1.5em;
 }
@@ -1412,7 +1383,6 @@ input.search-field {
 	width: 40px;
 	padding: 10px;
 }
-
 @media (max-width: 768px) {
 	.search-submit {
 		background: #fff;
@@ -1432,7 +1402,6 @@ input.search-field {
 .page-title.featured-article-title {
 	margin: 40px 0 30px;
 }
-
 @media (max-width: 768px) {
 	.page-title.featured-article-title {
 		margin: 20px 0;
@@ -1455,13 +1424,11 @@ input.search-field {
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 }
-
 @media (max-width: 768px) {
 	.featured-article-wrapper-inner {
 		width: calc(100% - (2 * 20px));
 	}
 }
-
 .featured-article-wrapper-inner::-webkit-scrollbar {
 	display: none;
 }
@@ -1475,7 +1442,6 @@ input.search-field {
 	scroll-snap-align: center;
 	margin-right: 50px;
 }
-
 @media (max-width: 768px) {
 	.featured-article-container {
 		flex-direction: column-reverse;
@@ -1488,7 +1454,6 @@ input.search-field {
 	margin: 89px 40px 30px 60px;
 	flex: 1;
 }
-
 @media (max-width: 768px) {
 	.featured-article-content {
 		margin: 20px;
@@ -1517,7 +1482,6 @@ input.search-field {
 	justify-content: center;
 	padding: 30px 30px 30px 0;
 }
-
 @media (max-width: 768px) {
 	.featured-article-image-container {
 		padding: 0;
@@ -1528,7 +1492,6 @@ input.search-field {
 	max-height: 390px;
 	width: auto;
 }
-
 @media (max-width: 768px) {
 	.featured-article-image {
 		width: 100%;
@@ -1583,7 +1546,6 @@ input.search-field {
 	font-family: "Lora Medium", georgia, "Times New Roman", times, serif;
 	line-height: 36px;
 }
-
 @media (max-width: 768px) {
 	.page-title {
 		margin-bottom: 20px;
@@ -1634,7 +1596,6 @@ input.search-field {
 	margin: 0 auto;
 	max-width: 872px;
 }
-
 @media (max-width: 768px) {
 	.single-post .post {
 		grid-template-columns: 1fr;
@@ -1655,7 +1616,6 @@ input.search-field {
 	grid-column: 1 / 3;
 	margin-bottom: 40px;
 }
-
 @media (min-width: 769px) {
 	.single-post .post-thumbnail {
 		height: 484px;
@@ -1666,7 +1626,6 @@ input.search-field {
 		width: auto;
 	}
 }
-
 @media (max-width: 768px) {
 	.single-post .post-thumbnail {
 		position: relative;
@@ -1687,7 +1646,6 @@ input.search-field {
 	text-align: center;
 	padding-bottom: 30px;
 }
-
 @media (max-width: 768px) {
 	.single-post .entry-header {
 		grid-row: 1;
@@ -1701,7 +1659,6 @@ input.search-field {
 	background: #ccc;
 	margin: 0 auto 20px;
 }
-
 @media (max-width: 768px) {
 	.single-post .entry-title-sep {
 		display: none;
@@ -1734,7 +1691,6 @@ input.search-field {
 	max-width: 1094px;
 	margin: 0 auto;
 }
-
 @media (max-width: 768px) {
 	.search-results-wrapper {
 		grid-template-columns: 1fr;
@@ -1742,7 +1698,6 @@ input.search-field {
 		max-width: 375px;
 	}
 }
-
 @media (max-width: 768px) {
 	.search-results-wrapper > .post {
 		border-bottom: 1px solid #ccc;
@@ -1755,7 +1710,6 @@ input.search-field {
 		border-bottom: 0;
 	}
 }
-
 .search-results-wrapper > .post > .entry-summary > p {
 	margin: 5px 0;
 }
@@ -1778,6 +1732,7 @@ input.search-field {
 
 /* Footnotes
 --------------------------------------------- */
+
 /* Shared
 --------------------------------------------- */
 .footnote-wrapper,
@@ -1793,23 +1748,19 @@ input.search-field {
 	margin-top: 20px;
 	padding-top: 20px;
 }
-
 @media (max-width: 768px) {
 	.footnotes-footer {
 		display: block;
 	}
 }
-
 .footnotes-footer.footnote-hidden {
 	display: none;
 }
-
 .footnotes-footer .footnotes-footer-title {
 	margin-bottom: 20px;
 	font-size: 1.6rem;
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 }
-
 .footnotes-footer .footnote-cta {
 	display: none;
 }
@@ -1820,7 +1771,6 @@ input.search-field {
 	font-family: "Lora Regular", georgia, "Times New Roman", times, serif;
 	line-height: 20px;
 }
-
 .single-post .footnote-wrapper {
 	display: inline-block;
 }
@@ -1838,11 +1788,9 @@ input.search-field {
 	grid-template-columns: 15px 1fr;
 	cursor: pointer;
 }
-
 .footnote-note a {
 	overflow-wrap: break-word;
 }
-
 .footnote-hidden .footnote-note {
 	visibility: hidden;
 }
@@ -1939,7 +1887,6 @@ input.search-field {
 	position: absolute;
 	left: -64px;
 }
-
 @media (max-width: 1024px) {
 	.shared-counts-wrap.style-small-circle {
 		position: initial;
@@ -1948,11 +1895,9 @@ input.search-field {
 		flex-flow: row;
 	}
 }
-
 .shared-counts-wrap.style-small-circle .shared-counts-no-count .shared-counts-count {
 	display: none;
 }
-
 .shared-counts-wrap.style-small-circle .shared-counts-button {
 	background: #fff;
 	border: 1px solid #ccc;
@@ -1964,30 +1909,25 @@ input.search-field {
 	border-radius: 999px;
 	margin-bottom: 10px;
 }
-
 @media (max-width: 1024px) {
 	.shared-counts-wrap.style-small-circle .shared-counts-button {
 		margin-bottom: 0;
 		margin-right: 10px;
 	}
 }
-
 .shared-counts-wrap.style-small-circle .shared-counts-icon-label {
 	height: 18px;
 }
-
 .shared-counts-wrap.style-small-circle .shared-counts-icon {
 	display: inline-block;
 	height: 100%;
 	color: #151515;
 }
-
 .shared-counts-wrap.style-small-circle .shared-counts-icon svg {
 	fill: currentColor;
 	width: 100%;
 	height: 100%;
 }
-
 .shared-counts-wrap.style-small-circle .shared-counts-label {
 	display: none;
 }
@@ -2007,7 +1947,6 @@ input.search-field {
 .widget {
 	margin: 0 0 1.5em;
 }
-
 .widget select {
 	max-width: 100%;
 }
@@ -2034,13 +1973,11 @@ input.search-field {
 	margin-bottom: 1.5em;
 	max-width: 100%;
 }
-
 .wp-caption img[class*="wp-image-"] {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
-
 .wp-caption .wp-caption-text {
 	margin: 0.8075em 0;
 }
@@ -2114,7 +2051,6 @@ input.search-field {
 	justify-content: center;
 	margin-bottom: 20px;
 }
-
 @media (max-width: 768px) {
 	.masthead {
 		flex-direction: column;
@@ -2135,7 +2071,6 @@ input.search-field {
 	border-radius: 50%;
 	margin-bottom: 20px;
 }
-
 @media (max-width: 768px) {
 	.masthead-image {
 		width: 70px;
@@ -2161,7 +2096,6 @@ input.search-field {
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	margin: 0 0 10px;
 }
-
 @media (max-width: 768px) {
 	.masthead-title {
 		margin: 0;
@@ -2188,7 +2122,6 @@ input.search-field {
 	padding-bottom: 30px;
 	margin-bottom: 30px;
 }
-
 @media (min-width: 769px) {
 	.wp-block-due-processed-custom-paragraph {
 		font-size: 2.2rem;
@@ -2207,7 +2140,6 @@ input.search-field {
 	padding-left: 30px;
 	padding-right: 30px;
 }
-
 @media (min-width: 769px) {
 	.wp-block-due-processed-custom-paragraph p {
 		max-width: 636px;
@@ -2218,8 +2150,10 @@ input.search-field {
 /*--------------------------------------------------------------
 # Plugins
 --------------------------------------------------------------*/
+
 /* Jetpack infinite scroll
 --------------------------------------------- */
+
 /* Hide the Posts Navigation and the Footer when Infinite Scroll is in use. */
 .infinite-scroll .posts-navigation,
 .infinite-scroll.neverending .site-footer {
@@ -2234,8 +2168,10 @@ input.search-field {
 /*--------------------------------------------------------------
 # Utilities
 --------------------------------------------------------------*/
+
 /* Accessibility
 --------------------------------------------- */
+
 /* Text meant only for screen readers. */
 .screen-reader-text {
 	border: 0;
@@ -2249,7 +2185,6 @@ input.search-field {
 	width: 1px;
 	word-wrap: normal !important;
 }
-
 .screen-reader-text:focus {
 	background-color: #f5f5f5;
 	border-radius: 3px;
@@ -2278,16 +2213,20 @@ input.search-field {
 /* Alignments
 --------------------------------------------- */
 .alignleft {
+
 	/*rtl:ignore*/
 	float: left;
+
 	/*rtl:ignore*/
 	margin-right: 1.5em;
 	margin-bottom: 1.5em;
 }
 
 .alignright {
+
 	/*rtl:ignore*/
 	float: right;
+
 	/*rtl:ignore*/
 	margin-left: 1.5em;
 	margin-bottom: 1.5em;
@@ -2305,6 +2244,7 @@ input.search-field {
 # Print
 # Order matters! Print styles must go last
 --------------------------------------------------------------*/
+
 /*--------------------------------------------------------------
 # Shared
 --------------------------------------------------------------*/
@@ -2333,7 +2273,6 @@ input.search-field {
 		display: block;
 	}
 }
-
 @media print and (max-width: 768px) {
 	.site-print-header {
 		width: calc(100% - (2 * 20px));
@@ -2370,5 +2309,3 @@ input.search-field {
 		display: block;
 	}
 }
-
-/*# sourceMappingURL=style.css.map */
