--- a/due-processed/style-rtl.css
+++ b/due-processed/style-rtl.css
@@ -550,6 +550,7 @@ html {
 
 body {
 	background: #fff;
+	overflow-x: hidden;
 }
 body.overflow-hidden {
 	overflow: hidden;
@@ -566,11 +567,15 @@ hr {
 	position: relative;
 	width: calc(100vw - 20px);
 	right: calc((100vw - 100% - 20px) / -2);
+	margin-bottom: 50px;
+	margin-top: 50px;
 }
 @media (min-width: 769px) {
 	.wp-block-separator {
 		width: calc(100vw - 100px);
 		right: calc((100vw - 100% - 100px) / -2);
+		margin-bottom: 30px;
+		margin-top: 30px;
 	}
 }
 
@@ -668,7 +673,7 @@ input[type="submit"] {
 	border: none;
 	background: #005b83;
 	color: #fff;
-	height: 40px;
+	min-height: 40px;
 	line-height: 1;
 	padding-right: 20px;
 	padding-left: 20px;
