--- a/due-processed/sass/base/elements/_body.scss
+++ b/due-processed/sass/base/elements/_body.scss
@@ -1,5 +1,6 @@
 body {
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
+	overflow-x: hidden;
 
 	&.overflow-hidden {
 		overflow: hidden;
