--- a/due-processed/sass/base/elements/_buttons.scss
+++ b/due-processed/sass/base/elements/_buttons.scss
@@ -7,7 +7,7 @@ input[type="submit"] {
 	border: none;
 	background: $color__background-button;
 	color: $color__text-button;
-	height: 40px;
+	min-height: 40px;
 	line-height: 1;
 	padding-left: 20px;
 	padding-right: 20px;
