styling tweaks to the footer

--- a/due-processed/style.css
+++ b/due-processed/style.css
@@ -1002,6 +1002,11 @@ textarea {
 	}
 }
 
+.footer-subscribe-form em {
+	font-size: 13px;
+	margin-top: 15px;
+}
+
 /*--------------------------------------------------------------
 # Pages
 --------------------------------------------------------------*/
